--- a/style/hero.scss
+++ b/style/hero.scss
@@ -25,7 +25,7 @@
 		min-width: 15em;
 		overflow: hidden;
 		display: flex;
-		z-index: 1;
+		z-index: 0;
 		@include a.mobileMediaQuery{
 			// decrease hero section image size
 			max-width: 23.5em;
